<resources>
    <string name="app_name" translatable="false">Shipley</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="description_nav_header" translatable="false">Navigation header</string>
    <string name="title_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="label_domain_name">Domain Name</string>
    <string name="label_access_token">Access Token</string>
    <string name="action_verify_register">Verify and Register</string>
    <string name="title_oss_licenses">OSS Licenses</string>
    <string name="description_account_avatar" translatable="false">Account avatar</string>
    <string name="title_account_list">Accounts</string>
</resources>
