<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.kb10uy.shipley.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_settingsActivity"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_homeFragment_to_notificationsFragment"
            app:destination="@id/nav_notifications" />
    </fragment>
    <fragment
        android:id="@+id/nav_notifications"
        android:name="org.kb10uy.shipley.view.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <activity
        android:id="@+id/nav_settings"
        android:name="org.kb10uy.shipley.view.SettingsActivity"
        android:label="@string/title_settings" />
</navigation>
